--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,8 @@ click==8.1.8
 distro==1.9.0
 dnspython==2.7.0
 fastapi==0.115.12
+geographiclib==2.0
+geopy==2.4.1
 groq==0.22.0
 h11==0.14.0
 httpcore==1.0.7
