--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,6 +13,7 @@ httpcore==1.0.7
 httptools==0.6.4
 httpx==0.28.1
 idna==3.10
+mangum==0.19.0
 motor==3.7.0
 pydantic==2.11.2
 pydantic_core==2.33.1
