--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,13 +1,18 @@
+# Use Python base image
 FROM python:3.12-slim
 
+# Set work directory
 WORKDIR /app
 
+# Install dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY app/ app/
-COPY public/ public/
+# Copy app files
+COPY . .
 
+# Expose port (adjust if needed)
 EXPOSE 8000
 
+# Start FastAPI app
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
