--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -76,6 +76,7 @@ MarkupSafe==3.0.2
 matplotlib==3.10.1
 mdurl==0.1.2
 more-itertools==10.6.0
+motor==3.7.0
 mpmath==1.3.0
 msgpack==1.1.0
 multidict==6.4.3
