--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,9 +14,7 @@ services:
       - visionvoice-net
 
   backend:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: 029899605292.dkr.ecr.eu-north-1.amazonaws.com/visionvoice-backend:latest
     container_name: visionvoice-backend
     ports:
       - "8000:8000"
@@ -31,7 +29,7 @@ services:
     networks:
       - visionvoice-net
     volumes:
-      - ./backend/app:/app/app
+      - ./backend/app:/app/app  # Optional, only if you want to override code
 
 networks:
   visionvoice-net:
