--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "base64-arraybuffer": "^1.0.2",
     "constants": "^0.0.2",
     "dotenv": "^16.5.0",
+    "eas-cli": "^16.3.3",
     "expo": "~52.0.46",
     "expo-av": "~15.0.2",
     "expo-blur": "~14.0.3",
