--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
+    "build:web": "expo export --platform web --output-dir web-build",
     "test": "jest --watchAll",
     "lint": "expo lint",
     "reset-project": "node ./scripts/reset-project.js"
