--- a/.github/workflows/expo-eas-ci.yml
+++ b/.github/workflows/expo-eas-ci.yml
@@ -18,30 +18,23 @@ jobs:
         with:
           node-version: 22
 
-      - name: Cache node modules
-        uses: actions/cache@v4
-        with:
-          path: frontend/node_modules
-          key: ${{ runner.os }}-node-${{ hashFiles('frontend/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-
       - name: Install dependencies
         working-directory: frontend
         run: npm install
 
-      - name: Authenticate with Expo
-        uses: expo/expo-github-action@v8
-        with:
-          eas-version: latest
-          token: ${{ secrets.EXPO_TOKEN }}
+      - name: Install Expo CLI and EAS CLI globally
+        run: |
+          npm install -g expo-cli eas-cli
 
-      - name: Start Android APK build
+      - name: Login to Expo with Username and Password
+        run: |
+          expo login -u ${{ secrets.EXPO_USERNAME }} -p ${{ secrets.EXPO_PASSWORD }}
+
+      - name: Start Android APK build (Production)
         working-directory: frontend
         run: eas build --platform android --profile preview --non-interactive
 
       - name: Upload APK as Artifact
-        if: success()
         uses: actions/upload-artifact@v4
         with:
           name: android-apk
