--- a/.github/workflows/expo-eas-ci.yml
+++ b/.github/workflows/expo-eas-ci.yml
@@ -30,7 +30,7 @@ jobs:
         run: |
           expo login -u ${{ secrets.EXPO_USERNAME }} -p ${{ secrets.EXPO_PASSWORD }}
 
-      - name: Start Android APK build (Production)
+      - name: Start Android APK build
         working-directory: frontend
         run: eas build --platform android --profile preview --non-interactive
 
